--- a/Project2/index 2.html
+++ b/Project2/index 2.html
@@ -8,6 +8,6 @@
   <h1>Blog News</h1>
   <div id="blog"></div>
 
-  <script src="app.js" type="text/javascript"></script>
+  <script src="app2.js" type="text/javascript"></script>
 </body>
 </html>
